[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commitlens"
version = "0.1.0"
description = "Surface code-churn hotspots, author distribution, and co-change clusters from any git repository."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tristan Garcia", email = "tjgarcia0427@gmail.com" }]
requires-python = ">=3.10"
keywords = ["git", "code-review", "cli", "analysis", "churn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/tjgarcia0427/commitlens"
Issues = "https://github.com/tjgarcia0427/commitlens/issues"

[project.scripts]
commitlens = "commitlens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/commitlens"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
